--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -8,7 +8,7 @@
 @font-face {
     font-family: 'Gilroy-Medium';
     /* <--- ИЗМЕНЕНИЕ: Пути к шрифтам обновлены */
-    src: url('../fonts/Gilroy-Medium.woff2') format('woff2'),
+    src: 
          url('../fonts/Gilroy-Medium.woff') format('woff');
     font-weight: 500;
     font-style: normal;
