--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -4,18 +4,23 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Объявляем переменные с цветами из вашей палитры */
+:root {
+  --panda-white: #FFFFFF;
+  --light-gray: #F7F7F7;
+  --panda-orange: #F15F31;
+}
+
 /* Глобальные стили, перенесенные из старого style.css */
 @font-face {
     font-family: 'Gilroy-Medium';
-    /* <--- ИЗМЕНЕНИЕ: Пути к шрифтам обновлены */
-    src: 
+    src: url('../fonts/Gilroy-Medium.woff2') format('woff2'),
          url('../fonts/Gilroy-Medium.woff') format('woff');
     font-weight: 500;
     font-style: normal;
 }
 @font-face {
     font-family: 'Gilroy-SemiBold';
-    /* <--- ИЗМЕНЕНИЕ: Пути к шрифтам обновлены */
     src: url('../fonts/Gilroy-SemiBold.woff2') format('woff2'),
          url('../fonts/Gilroy-SemiBold.woff') format('woff');
     font-weight: 600;
@@ -23,7 +28,6 @@
 }
 @font-face {
     font-family: 'Gilroy-Bold';
-    /* <--- ИЗМЕНЕНИЕ: Пути к шрифтам обновлены */
     src: url('../fonts/Gilroy-Bold.woff2') format('woff2'),
          url('../fonts/Gilroy-Bold.woff') format('woff');
     font-weight: 700;
@@ -37,17 +41,26 @@ body {
     background-color: #F7F7F7; /* Tailwind: bg-light-gray */
 }
 
-/* Глобальный запрет на перетаскивание и выделение */
 img, a {
   -webkit-user-drag: none;
   user-select: none;
 }
 
-@layer components {
-  .gap-page {
-    @apply mt-25; /* Применяем отступ сверху 100px */
-  }
-  .gap-container {
-    @apply mb-15; /* Применяем отступ снизу 60px */
-  }
+/*::::::::::::::::::::::::::::::::::::::::::::::::::*/
+/* Скроллбар                                        */
+/*::::::::::::::::::::::::::::::::::::::::::::::::::*/
+
+::-webkit-scrollbar {
+  width: 0.6rem;
+  height: 0.6rem;
+  background-color: var(--gray);
+  transition: all 0.3s ease;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--dark-gray);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--panda-orange);
 }
