--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -168,6 +168,6 @@ html.lenis {
 
 ::selection {
   background-color: #89C869; /* Цвет фона выделения */
-  color: #131C26; /* Цвет текста внутри выделения */
+  color: #F7F7F7; /* Цвет текста внутри выделения */
 }
 
